--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -110,7 +110,6 @@ header {
 		padding: 0 rem-calc(8);
 
 		.menu-icon {
-			float: right;
 			height: rem-calc(37);
 		}
 
@@ -119,7 +118,6 @@ header {
 		}
 
 		.title-bar-title {
-			float: right;
 			line-height: rem-calc(37);
 			font-size: rem-calc(20);
 		}
